[package]
name = "BundesarchivUtility"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = "0.4"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }
